// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate-sectioned-bar > calculateSectionBar > should calculateSectionBar segments correctly 1`] = `
{
  "completedSegments": [
    {
      "completed": 50,
      "count": 495,
      "title": "bar",
    },
    {
      "completed": 1,
      "count": 5,
      "title": "foo",
    },
  ],
  "incompleteSegments": 0,
}
`;

exports[`calculate-sectioned-bar > calculateSectionBar > should calculateSectionBar segments correctly 3`] = `
{
  "completedSegments": [
    {
      "completed": 25,
      "count": 10,
      "title": "bar",
    },
    {
      "completed": 25,
      "count": 10,
      "title": "foo",
    },
  ],
  "incompleteSegments": 0,
}
`;

exports[`calculate-sectioned-bar > calculateSectionBar > should calculateSectionBar segments correctly 4`] = `
{
  "completedSegments": [
    {
      "completed": 17,
      "count": 10,
      "title": "bar",
    },
    {
      "completed": 17,
      "count": 10,
      "title": "foo",
    },
    {
      "completed": 17,
      "count": 10,
      "title": "moo",
    },
  ],
  "incompleteSegments": 0,
}
`;

exports[`calculate-sectioned-bar > calculateSectionBar > should calculateSectionBar segments correctly 5`] = `
{
  "completedSegments": [
    {
      "completed": 17,
      "count": 50,
      "title": "bar",
    },
    {
      "completed": 17,
      "count": 50,
      "title": "foo",
    },
    {
      "completed": 17,
      "count": 50,
      "title": "foo",
    },
  ],
  "incompleteSegments": 0,
}
`;

exports[`calculate-sectioned-bar > calculateSectionBar > should calculateSectionBar segments correctly 6`] = `
{
  "completedSegments": [
    {
      "completed": 17,
      "count": 50,
      "title": "foo",
    },
    {
      "completed": 17,
      "count": 50,
      "title": "foo",
    },
    {
      "completed": 7,
      "count": 20,
      "title": "bar",
    },
  ],
  "incompleteSegments": 10,
}
`;
